<resources>
    <string name="app_name">Design</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">正在加载...</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">登陆</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wan_android">欢迎使用 Wan Android</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sign_in">登陆</string>
    <string name="tv_register"><u>我要注册</u></string>
    <string name="forgot_pass"><u>忘记密码</u></string>
    <string name="register_hint">欢迎注册 Wan Android</string>
    <string name="but_register">注册</string>
    <string name="tv_sign_in"><u>我要登录</u></string>
    <string name="repeat_pass">确认密码</string>
    <string name="just_do_it">Just do it !</string>
    <string name="collection">我的收藏</string>
    <string name="todolist">ToDoList</string>
    <string name="author">关于作者</string>
    <string name="sign"><u>登陆/注册</u></string>
    <string name="log_off">退出登录</string>
    <string name="collect">收藏文章</string>
    <string name="ending">----我是有底线的----</string>
    <string name="des">写下要做的事情...</string>
    <string name="cancle">取消</string>
    <string name="save">保存</string>
    <string name="deadline">期限</string>
    <string name="property_1">紧急</string>
    <string name="property_2">一般</string>
    <string name="property_3">暂缓</string>
    <string name="deadline_text">期限：%1$s</string>
    <string name="priority_text">优先级：%1$s</string>
    <string name="empty_text">你还没有TodoList，快来添加吧</string>
    <string name="switch_text">切换</string>
    <string name="version">当前版本：%1$s</string>
    <string name="hint">本项目仅作学习交流使用</string>
    <string name="emmm">欢迎交流，听说关注、点赞、star都会变帅啊 滑稽.gif</string>

</resources>
