<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:id="@+id/ll_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_collection"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:textSize="16sp"
                android:textColor="@color/colorTextBlack"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:id="@+id/ll_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_todo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/todolist"
                android:textSize="16sp"
                android:textColor="@color/colorTextBlack"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:id="@+id/ll_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_author"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="16sp"
                android:textColor="@color/colorTextBlack"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:id="@+id/ll_log_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_log_off"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/log_off"
                android:textSize="16sp"
                android:textColor="@color/colorTextBlack"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>
</merge>